fix story settings button on mobile safari

--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -96,6 +96,11 @@
       .octicon {
         fill: $lightSubTextColor;
       }
+      .options_button {
+        -webkit-appearance: none;
+        background-color: transparent;
+        border: none;
+      }
       .updated {
         font-size: 1rem;
         font-weight: $regular;
